--- a/flaskapp/templates/my_table.html
+++ b/flaskapp/templates/my_table.html
@@ -126,7 +126,7 @@
 
 <div class = container>
     <h1>UK Parliamentary Constituency Data</h1>
-    <p> This table only depicts the first 10 observations, so I roughly know what the table looks.</p>
+    <p> This table only depicts the first 10 observations, to get an idea of what the data looks like.</p>
     <br>
 <div id="table-container" style="overflow: auto; height: 800px;">
     <table border="1">
