--- a/flaskapp/templates/layout.html
+++ b/flaskapp/templates/layout.html
@@ -16,6 +16,9 @@
                     <li><a href="{{ url_for('about') }}">About</a></li>
                     <li><a href="{{ url_for('new_post') }}">New post</a></li>
                     <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                    <li><a href="{{ url_for('data') }}">Data Table</a></li>
+                    <li><a href="{{ url_for('green_vote') }}">Green Party Vote Share 2019</a></li>
+                    <li><a href="{{ url_for('retired_impact') }}">Popularity Among Retired Citizens</a></li>
                 </ul>
             </nav>
         </strong>
